<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:boatguard="http://schemas.android.com/apk/res/com.boatguard.boatguard"
    style="@style/SettingsLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

	<LinearLayout 
		android:layout_width="match_parent"
	    android:layout_height="@dimen/settings_height"
	    android:orientation="horizontal" >
	    
	    <com.boatguard.boatguard.components.TextViewFont
	        style="@style/SettingsText"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:text="@string/refresh_time"
	        boatguard:font_name="@string/font_medium" />
			    
		<Spinner
		    android:id="@+id/spinner_refresh_time"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:gravity="center_vertical|right"
		    style="@style/SpinnerSmallEditText"
		    android:entries="@array/refresh"
			android:prompt="@string/choose_refresh_time" />
    </LinearLayout>
    
	<LinearLayout 
		android:layout_width="match_parent"
	    android:layout_height="@dimen/settings_height"
	    android:orientation="horizontal" >
	    
	    <com.boatguard.boatguard.components.TextViewFont
	        style="@style/SettingsText"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:text="@string/color_theme"
	        boatguard:font_name="@string/font_medium" />
			    
		<com.boatguard.boatguard.components.SwitchFont
		    boatguard:font_name="@string/font_medium"
        	android:id="@+id/switch_color_theme"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center_vertical|right"
		    android:layout_weight="2"
		    android:textOff="@string/night"
		    android:textOn="@string/day"
		    android:switchTextAppearance="@style/SwitchTextAppearance"
		    android:track="@drawable/switcher_track" />
    </LinearLayout>
 
	<com.boatguard.boatguard.components.TextViewFont
        android:layout_width="wrap_content"
        android:layout_height="@dimen/settings_height"
        android:text="@string/language"
        boatguard:font_name="@string/font_medium"
    	style="@style/SettingsText" />
	
	<FrameLayout
	    android:layout_width="match_parent"
	    android:layout_height="@dimen/login_edit_height">
	    
		<Spinner
		    android:id="@+id/language"
		    android:layout_width="match_parent"
		    android:layout_height="@dimen/login_edit_height"
		    android:gravity="center_vertical|left"
		    style="@style/SpinnerEditText"
		    android:entries="@array/languages"
			android:prompt="@string/choose_language" />
	</FrameLayout>	
		
	
	<LinearLayout 
		android:layout_width="match_parent"
	    android:layout_height="@dimen/settings_height"
	    android:orientation="horizontal" >
	    
	    <com.boatguard.boatguard.components.TextViewFont
	        style="@style/SettingsText"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:text="@string/application_version"
	        boatguard:font_name="@string/font_medium" />
			    
	    <com.boatguard.boatguard.components.TextViewFont
	        android:id="@+id/tv_application_version"
 		    style="@style/SettingsTextRight"
	        boatguard:font_name="@string/font_medium"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="3" />
    </LinearLayout>
	
</LinearLayout>
