<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:boatguard="http://schemas.android.com/apk/res/com.boatguard.boatguard"
    style="@style/SettingsLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

	<LinearLayout 
		android:layout_width="match_parent"
	    android:layout_height="@dimen/settings_height"
	    android:orientation="horizontal" >
	    
	    <com.boatguard.boatguard.components.TextViewFont
	        style="@style/SettingsText"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:text="@string/anchor_drifting"
	        boatguard:font_name="@string/font_medium" />
			    
		<Switch
		    android:id="@+id/switch_anchor_drifting"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center_vertical|right"
		    android:layout_weight="2"
		    android:textOff="@string/off"
		    android:textOn="@string/on"
		    android:track="@drawable/switcher" />
    
    </LinearLayout>
    
	<LinearLayout 
		android:layout_width="match_parent"
	    android:layout_height="@dimen/settings_height"
	    android:orientation="horizontal" >
	    
	    <com.boatguard.boatguard.components.TextViewFont
	        style="@style/SettingsText"
	        boatguard:font_name="@string/font_medium"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:text="@string/anchor_drifting_radius" />
    
	    <com.boatguard.boatguard.components.TextViewFont
	        android:id="@+id/tv_anchor_drifting"
 		    style="@style/SettingsValueText"
	        boatguard:font_name="@string/font_medium"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="3"
	        android:text="700m" />
	</LinearLayout>
    
	<LinearLayout 
		android:layout_width="match_parent"
	    android:layout_height="@dimen/settings_height"
	    android:orientation="horizontal" >
	    
 		<SeekBar
 		    android:id="@+id/seekbar_anchor_drifting"
 		    android:layout_width="match_parent"
 		    android:layout_height="wrap_content"
 		    style="@style/SettingsSeekBarSmall"/>	    
	</LinearLayout>
	    
	<LinearLayout 
		android:layout_width="match_parent"
	    android:layout_height="@dimen/settings_height"
	    android:orientation="horizontal" >
	    
	    <com.boatguard.boatguard.components.TextViewFont
	        style="@style/SettingsText"
	        boatguard:font_name="@string/font_medium"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:text="@string/anchor_drifting_current" />
	    
	    <com.boatguard.boatguard.components.TextViewFont
	        android:id="@+id/button_anchor_drifting_define"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_weight="2"
	        android:text="@string/anchor_drifting_define"
	        boatguard:font_name="@string/font_medium"
	    	style="@style/SettingsButtonText" />	    
    
    </LinearLayout>

</LinearLayout>
