<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:boatguard="http://schemas.android.com/apk/res/com.boatguard.boatguard"
    style="@style/SettingsLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    
	<LinearLayout 
		android:layout_width="match_parent"
	    android:layout_height="@dimen/settings_height"
	    android:orientation="horizontal" >
	    
	    <com.boatguard.boatguard.components.TextViewFont
	        style="@style/SettingsText"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:text="@string/alarm_notifications"
	        boatguard:font_name="@string/font_medium" />
    </LinearLayout>
    
	<LinearLayout 
		android:layout_width="match_parent"
	    android:layout_height="@dimen/settings_height"
	    android:orientation="horizontal" >
	    
	    <com.boatguard.boatguard.components.TextViewFont
	        style="@style/SettingsText"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:text="@string/play_sound"
	        boatguard:font_name="@string/font_medium" />
			    
		<Switch
		    android:id="@+id/switch_play_sound"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center_vertical|right"
		    android:layout_weight="2"
		    android:textOff="@string/off"
		    android:textOn="@string/on"
		    android:track="@drawable/switcher" />
    </LinearLayout>
 
	
	<LinearLayout 
		android:layout_width="match_parent"
	    android:layout_height="@dimen/settings_height"
	    android:orientation="horizontal" >
	    
	    <com.boatguard.boatguard.components.TextViewFont
	        style="@style/SettingsText"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:text="@string/vibrate"
	        boatguard:font_name="@string/font_medium" />
			    
		<Switch
		    android:id="@+id/switch_vibrate"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center_vertical|right"
		    android:layout_weight="2"
		    android:textOff="@string/off"
		    android:textOn="@string/on"
		    android:track="@drawable/switcher" />
    </LinearLayout>
    
	<LinearLayout 
		android:layout_width="match_parent"
	    android:layout_height="@dimen/settings_height"
	    android:orientation="horizontal" >
	    
	    <com.boatguard.boatguard.components.TextViewFont
	        style="@style/SettingsText"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:text="@string/pop_up"
	        boatguard:font_name="@string/font_medium" />
			    
		<Switch
		    android:id="@+id/switch_pop_up"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center_vertical|right"
		    android:layout_weight="2"
		    android:textOff="@string/off"
		    android:textOn="@string/on"
		    android:track="@drawable/switcher" />
    </LinearLayout>

	<LinearLayout 
		android:layout_width="match_parent"
	    android:layout_height="@dimen/settings_height"
	    android:orientation="horizontal" >
	    
	    <com.boatguard.boatguard.components.TextViewFont
	        style="@style/SettingsText"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:text="@string/alarm_settings"
	        boatguard:font_name="@string/font_medium" />
    </LinearLayout>
    	
    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?background"
        android:id="@+id/lv_obu_alarms"
        android:divider="@drawable/divider"
    	android:dividerHeight="5dp"/>    
        
        
			
</LinearLayout>
