<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:boatguard="http://schemas.android.com/apk/res/com.boatguard.boatguard"
    style="@style/SettingsLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

	<LinearLayout 
		android:layout_width="match_parent"
	    android:layout_height="@dimen/settings_height"
	    android:orientation="horizontal" >
	    
	    <com.boatguard.boatguard.components.TextViewFont
	        style="@style/SettingsText"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:text="@string/bilge_pump_always"
	        boatguard:font_name="@string/font_medium" />
			    
		<Switch
		    android:id="@+id/switch_pump_alarm_always"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center_vertical|right"
		    android:layout_weight="2"
		    android:textOff="@string/off"
		    android:textOn="@string/on"
		    android:track="@drawable/switcher" />
    
    </LinearLayout>
    
    <com.boatguard.boatguard.components.TextViewFont
        style="@style/SettingsText"
        boatguard:font_name="@string/font_medium"
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_height"
        android:layout_weight="1"
        android:text="@string/bilge_pump_short_period" />


	<LinearLayout 
		android:layout_width="match_parent"
	    android:layout_height="@dimen/settings_height"
	    android:orientation="horizontal" >
	    
		<Spinner
		    android:id="@+id/spinner_pump_short_period"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center_vertical|left"
		    android:entries="@array/short_period" />
		
	    <com.boatguard.boatguard.components.TextViewFont
	        style="@style/SettingsText"
	        boatguard:font_name="@string/font_medium"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:text="@string/bilge_pump_10_min" />
	</LinearLayout>
	
    <!-- com.boatguard.boatguard.components.TextViewFont
        style="@style/SettingsTextSmall"
        boatguard:font_name="@string/font_medium"
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_text_height"
        android:text="@string/bilge_pump_short_period_desc" /-->	

    <com.boatguard.boatguard.components.TextViewFont
        style="@style/SettingsText"
        boatguard:font_name="@string/font_medium"
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_height"
        android:text="@string/bilge_pump_long_period" />

	
	<LinearLayout 
		android:layout_width="match_parent"
	    android:layout_height="@dimen/settings_height"
	    android:orientation="horizontal" >
	    
		<Spinner
		    android:id="@+id/spinner_pump_long_period"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center_vertical|left"
		    android:entries="@array/long_period" />
	    
	    <com.boatguard.boatguard.components.TextViewFont
	        style="@style/SettingsText"
	        boatguard:font_name="@string/font_medium"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:text="@string/bilge_pump_100_min" />
	</LinearLayout>
	
	
    <!-- com.boatguard.boatguard.components.TextViewFont
        style="@style/SettingsTextSmall"
        boatguard:font_name="@string/font_medium"
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_text_height"
        android:text="@string/bilge_pump_long_period_desc" /-->	

	<com.github.mikephil.charting.charts.LineChart
	    android:id="@+id/chart"
	    android:layout_width="match_parent"
	    android:layout_height="@dimen/chart_height"
	    android:layout_marginLeft="-10dp"
	    android:layout_marginRight="-10dp"
	    android:layout_marginTop="10dp" />¸
	    				
</LinearLayout>
