<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:boatguard="http://schemas.android.com/apk/res/com.boatguard.boatguard"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

	<LinearLayout 
		android:layout_width="match_parent"
	    android:layout_height="@dimen/settings_height"
	    android:orientation="horizontal" >
	    
	    <com.boatguard.boatguard.components.TextViewFont
	        android:id="@+id/tv_alarm_message_short"
		    style="@style/SettingsText"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        boatguard:font_name="@string/font_medium" />
			    
		<com.boatguard.boatguard.components.SwitchFont
		    boatguard:font_name="@string/font_medium"
        	android:id="@+id/switch_alarm_enabled"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center_vertical|right"
		    android:layout_weight="2"
		    android:textOff="@string/off"
		    android:textOn="@string/on"
		    android:switchTextAppearance="@style/SwitchTextAppearance"
		    android:track="@drawable/switcher_track" />
    </LinearLayout>

	<LinearLayout 
		android:layout_width="match_parent"
	    android:layout_height="@dimen/settings_height"
	    android:orientation="horizontal" >
	    
	    <com.boatguard.boatguard.components.TextViewFont
		    style="@style/SettingsText"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:text="@string/send_email"
	        boatguard:font_name="@string/font_medium" />
			    
		<com.boatguard.boatguard.components.SwitchFont
		    boatguard:font_name="@string/font_medium"
        	android:id="@+id/switch_send_email"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center_vertical|right"
		    android:layout_weight="2"
		    android:textOff="@string/off"
		    android:textOn="@string/on"
		    android:switchTextAppearance="@style/SwitchTextAppearance"
		    android:track="@drawable/switcher_track" />
    </LinearLayout>

	<LinearLayout 
		android:layout_width="match_parent"
	    android:layout_height="@dimen/settings_height"
	    android:orientation="horizontal" >
	    
	    <com.boatguard.boatguard.components.TextViewFont
		    style="@style/SettingsText"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:text="@string/alarm_friends"
	        boatguard:font_name="@string/font_medium" />
			    
		<com.boatguard.boatguard.components.SwitchFont
		    boatguard:font_name="@string/font_medium"
        	android:id="@+id/switch_alarm_friends"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center_vertical|right"
		    android:layout_weight="2"
		    android:textOff="@string/off"
		    android:textOn="@string/on"
		    android:switchTextAppearance="@style/SwitchTextAppearance"
		    android:track="@drawable/switcher_track" />
    </LinearLayout>		
</LinearLayout>
